k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heyb-db
  labels:
    app: heyb
    component: db
spec:
  selector:
    app: heyb
    component: db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  type: ClusterIP
