k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heyb-web
  labels:
    app: heyb
    component: web
spec:
  selector:
    app: heyb
    component: web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
  type: NodePort
